shrinking screen height for confirmation screens

--- a/mSprayApp/res/layout/confirm_unsprayed.xml
+++ b/mSprayApp/res/layout/confirm_unsprayed.xml
@@ -40,16 +40,18 @@
             <TextView
                 android:id="@+id/confirm_unsprayed_rooms_unsprayed_label"
                 android:layout_width="0dp"
-                android:layout_weight="0.7"
+                android:layout_weight="0.8"
                 android:text="@string/roomsUnsprayedLabel"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_unsprayed_rooms_unsprayed_value"
                 android:layout_width="0dp"
-                android:layout_weight="0.3"
+                android:layout_weight="0.2"
+                android:gravity="right"
                 android:text=""
                 android:textSize="24sp" />
+
         </TableRow>
 
         <TableRow
@@ -66,16 +68,18 @@
             <TextView
                 android:id="@+id/confirm_unsprayed_shelters_unsprayed_label"
                 android:layout_width="0dp"
-                android:layout_weight="0.7"
+                android:layout_weight="0.8"
                 android:text="@string/sheltersUnsprayedLabel"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_unsprayed_shelters_unsprayed_value"
                 android:layout_width="0dp"
-                android:layout_weight="0.3"
+                android:layout_weight="0.2"
+                android:gravity="right"
                 android:text=""
                 android:textSize="24sp" />
+
         </TableRow>
     </TableLayout>
 
