--- a/mSprayApp/res/layout/gps_location.xml
+++ b/mSprayApp/res/layout/gps_location.xml
@@ -22,6 +22,7 @@
             android:id="@+id/gps_location_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/gps_image"
             android:gravity="center"
             android:src="@drawable/gpssignal" />
 
