--- a/mSprayApp/res/layout/start_new_spray.xml
+++ b/mSprayApp/res/layout/start_new_spray.xml
@@ -29,9 +29,10 @@
             android:id="@+id/activity_start_new_spray_fake_button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_weight="1.0"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_weight="0.8"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/button_selector_green" >
 
             <Button
@@ -51,17 +52,6 @@
             </Button>
         </RelativeLayout>
 
-        <Button
-            android:id="@+id/activity_done_spraying_button"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_margin="16dp"
-            android:layout_weight="0.2"
-            android:background="@drawable/button_selector_red"
-            android:text="@string/doneSpraying"
-            android:textColor="#fff"
-            android:textSize="30sp" >
-        </Button>
     </LinearLayout>
 
 </RelativeLayout>
