Aesthetic changes. Also added Reason for Unsprayed.

--- a/mSprayApp/res/layout/finished.xml
+++ b/mSprayApp/res/layout/finished.xml
@@ -23,10 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/finished_textview_title"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp" >
-        
-         <TableRow
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp" >
+
+        <TableRow
             android:id="@+id/finished_chemical_row"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -249,6 +249,75 @@
 
             <TextView
                 android:id="@+id/finished_can_refilled2_value"
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:text=""
+                android:textColor="#fff"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/finished_rooms_unsprayed_row"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp" >
+
+            <TextView
+                android:id="@+id/finished_rooms_unsprayed_label"
+                android:layout_width="0dp"
+                android:layout_weight="0.7"
+                android:text="Rooms Unsprayed"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/finished_rooms_unsprayed_value"
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:text=""
+                android:textColor="#fff"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/finished_shelters_unsprayed_row"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp" >
+
+            <TextView
+                android:id="@+id/finished_shelters_unsprayed_label"
+                android:layout_width="0dp"
+                android:layout_weight="0.7"
+                android:text="Shelters Unsprayed"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/finished_shelters_unsprayed_value"
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:text=""
+                android:textColor="#fff"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/finished_unsprayed_reason_row"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp" >
+
+            <TextView
+                android:id="@+id/finished_unsprayed_reason_label"
+                android:layout_width="0dp"
+                android:layout_weight="0.7"
+                android:text="Reason"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/finished_unsprayed_reason_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
                 android:text=""
