--- a/mSprayApp/res/layout/unsprayed.xml
+++ b/mSprayApp/res/layout/unsprayed.xml
@@ -87,7 +87,7 @@
                 android:textSize="24sp" >
             </EditText>
         </LinearLayout>
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -115,6 +115,14 @@
                 android:orientation="vertical" >
 
                 <RadioButton
+                    android:id="@+id/unsprayed_radiobutton_open"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/open"
+                    android:textColor="#fff" />
+
+                <RadioButton
                     android:id="@+id/unsprayed_radiobutton_locked"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,7 +134,7 @@
                     android:id="@+id/unsprayed_radiobutton_refused"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="true"
+                    android:checked="false"
                     android:text="@string/refused"
                     android:textColor="#fff" />
             </RadioGroup>
