--- a/mSprayApp/res/layout/start_new_spray.xml
+++ b/mSprayApp/res/layout/start_new_spray.xml
@@ -29,7 +29,7 @@
             android:id="@+id/activity_start_new_spray_fake_button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="16dp"
+           
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_weight="0.89"
@@ -54,16 +54,14 @@
 
         <Button
             android:id="@+id/activity_start_new_spray_button_finished"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+             android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            android:layout_weight="0.2"
             android:background="@drawable/button_selector_red"
-            android:text="@string/DoneForTheDay"
+            android:text="No Badge"
             android:textColor="#fff"
-            android:textSize="28sp"
-            android:visibility="gone" 
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight = "3dp"
-            android:layout_marginBottom = "3dp"/>
+            android:textSize="30sp"/>
 
     </LinearLayout>
 
