New images and text. Almost neha standards compliant

--- a/mSprayApp/res/layout/activity_mspray.xml
+++ b/mSprayApp/res/layout/activity_mspray.xml
@@ -29,22 +29,34 @@
         android:background="@drawable/button_selector_green"
         android:onClick="onClick" >
 
-        <Button
-            android:id="@+id/activity_mspray_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:background="@android:color/transparent"
-            android:drawablePadding="16dp"
-            android:drawableTop="@drawable/foreman"
+        <LinearLayout
+            android:id="@+id/activity_mspray_button_wrapper"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
             android:clickable="false"
-            android:gravity="center"
-            android:text="@string/scanSelf"
-            android:textColor="#fff"
-            android:textSize="30sp" />
+            android:orientation="vertical"
+            android:padding="2dp" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.8"
+                android:clickable="false"
+                android:padding="16dp"
+                android:src="@drawable/clipboard" />
+
+            <TextView
+                android:id="@+id/activity_mspray_button_text_view"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"
+                android:clickable="false"
+                android:gravity="center"
+                android:lines="1"
+                android:text="@string/scanSelf"
+                android:textColor="#fff"
+                android:textSize="30sp" />
+        </LinearLayout>
     </RelativeLayout>
 
 </RelativeLayout>
