--- a/mSprayApp/res/layout/scan_rfid.xml
+++ b/mSprayApp/res/layout/scan_rfid.xml
@@ -48,14 +48,15 @@
 
             <LinearLayout
                 android:id="@+id/activity_mspray_button_wrapper"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:clickable="false"
                 android:orientation="vertical"
                 android:padding="2dp" >
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/scan_rfid_imageView"
+                    android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.8"
                     android:clickable="false"
