--- a/mSprayApp/res/layout/confirm_fendona.xml
+++ b/mSprayApp/res/layout/confirm_fendona.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/grad3"
         android:gravity="center"
-        android:text="@string/confirmKOrthrine"
+        android:text="@string/confirmFendona"
         android:textSize="28sp" />
 
     <LinearLayout
