--- a/mSprayApp/res/layout/scan_rfid.xml
+++ b/mSprayApp/res/layout/scan_rfid.xml
@@ -56,6 +56,7 @@
 
                 <ImageView
                     android:id="@+id/scan_rfid_imageView"
+                    android:contentDescription="@string/scanSelf"
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.8"
